--- a/index.html
+++ b/index.html
@@ -2,10 +2,38 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>RENDERD</title>
+<title>RENDERED</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<!-- header sections -->
+	<!--注视-->
+	<header>
+		<nav class="site-nav">
+			<ul>
+				<li><a href="#">HOME</a></li>
+				<li><a href="#">ABOUT</a></li>
+				<li><a href="#">GALLERY</a></li>
+				<li><a href="#">TICKETS</a></li>
+				<li><a href="#">CONTACT</a></li>
+			</ul>
+		</nav>
+	</header>
+	<!--主体部分-->
+	<main>
+		<section class="hero">
+			<div class="hero-content">
+				<h2 class="hero-leadin">some space <span>占扬硕</span></h2>
+				<h1 class="hero-title"></h1>
+				<h3 class="hero-date">1233443</h3>
+			</div>
+			<div><img src="images/paintwave.jpg" alt=""></div>
+		</section>
+		<section class="intro">
+			<div class="intro-text">					   										         	<p>了圣诞节福利卡技术的老骥伏啊士大夫撒的发生的发生的发撒发生的发生的啊发舒服啊啥的负担撒风三大发达发撒的发达发生放枥卡三大纪律开发商地方</p>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
